<resources>
    <string name="app_name">Time to Train</string>
    <string name="text1">Удобное вам время для тренировок</string>
    <string name="content">Пора начинать тренировку!</string>
    <string name="default_text">Текст</string>

    <string name="time_edit_text_hint">Время тренировки</string>
    <string name="btn_time_text">Установить</string>
    <string-array name="sexlist">
        <item>Мужчина</item>
        <item>Женщина</item>
    </string-array>
    <string name="course">Выбор тренировки</string>
    <string name="level">Ваш уровень подготовки</string>
    <string name="gender">Пол</string>
    <string name="level_spinner">Сложность</string>
    <string-array name="levels">
        <item>План для начинающих 1</item>
        <item>План для начинающих 2</item>
        <item>Промежуточный план 1</item>
        <item>Промежуточный план 2</item>
        <item>Продвинутый план 1</item>
        <item>Продвинутый план 2</item>
    </string-array>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="ready">Готово</string>

    <string name="course_of_train">Курс тренировок</string>
    <string name="sleeping">Сон</string>
    <string name="exercises">Упражнения</string>
    <string name="new_course">Создать новый курс</string>
    <string name="count">Повторы</string>
    <string name="start_training">Начать</string>
    <string name="recreation">Отдохните до следующего упражнения</string>
    <string name="add_time">+15 секунд</string>
    <string name="none_sleep">Сведения о сне не записаны</string>
    <string name="add_entry">Записать</string>
    <string name="sleep_length_annotation">Продолж-ть сна</string>
    <string name="calories">Потрачено калорий</string>
    <string name="change">Редактировать</string>
    <string name="start_sleep_annotation">Время засыпания</string>
    <string name="end_sleep_annotation">Время пробуждения</string>
    <string name="how_sleep">Как спалось?</string>
    <string name="comment_sleep">Комментарий</string>
    <string name="comment_sleep_edittext">Хороший сон</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_exercise">ExerciseActivity</string>
    <string name="title_activity_recreation">Отдохните</string>
    <string name="title_activity_recreation1">RecreationActivity1</string>
    <string name="title_activity_list_exercises">ListExercisesActivity</string>
    <string name="title_activity_exercise_description">ExerciseDescriptionActivity</string>


    <string name="hours"> ч</string>
    <string name="minutes"> мин</string>
    <string name="title_activity_new_sleep">NewSleepActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">GOT IT</string>

    <string name="slide_1_title">Hello Food!</string>
    <string name="slide_1_desc">The easiest way to order food from your favourite restaurant!</string>

    <string name="slide_2_title">Movie Tickets</string>
    <string name="slide_2_desc">Book movie tickets for your family and friends!</string>

    <string name="slide_3_title">Great Discounts</string>
    <string name="slide_3_desc">Best discounts on every single service we offer!</string>

    <string name="slide_4_title">World Travel</string>
    <string name="slide_4_desc">Book tickets of any transportation and travel the world!</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

</resources>
