<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/colorBackground"
    android:id="@+id/new_course_layout">

    <TextView
        android:text="@string/time_edit_text_hint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewTime"
        android:layout_alignBaseline="@+id/btn_time"
        android:layout_alignBottom="@+id/btn_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:textSize="20sp"
        android:textColor="@color/colorSecondaryText" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/spinnerGender"
        android:layout_below="@+id/textViewGender"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/level_spinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:id="@+id/textViewLevel"
        android:layout_below="@+id/spinnerGender"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text="@string/gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textViewGender"
        android:layout_marginTop="25dp"
        android:layout_below="@+id/btn_time"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:id="@+id/spinnerLevel"
        android:layout_below="@+id/textViewLevel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/buttonCourse"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/spinnerLevel"
        android:layout_marginTop="29dp"
        android:elevation="4dp"
        android:padding="8dp"
        android:text="@string/course"
        android:textColor="@color/colorBackground"
        android:textSize="18sp"
        android:minHeight="50dp"/>

    <Button
        android:id="@+id/buttonReady"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonCourse"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="37dp"
        android:elevation="4dp"
        android:padding="8dp"
        android:text="@string/ready"
        android:textColor="@color/colorBackground"
        android:textSize="18sp"
        android:minHeight="50dp"/>

    <Button
        android:id="@+id/btn_time"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:elevation="4dp"
        android:minHeight="50dp"
        android:padding="8dp"
        android:text="@string/btn_time_text"
        android:textColor="@color/colorBackground"
        android:textSize="18sp" />


</RelativeLayout>