<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.a2.timetotrain.RecreationActivity"
    tools:showIn="@layout/activity_recreation">

    <TextView
        android:id="@+id/textView_recreationText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="145dp"
        android:gravity="center_vertical|center_horizontal"
        android:padding="@dimen/tile_padding"
        android:text="@string/recreation"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/text_big_text" />

    <TextView
        android:id="@+id/textView_timer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_recreationText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="54dp"
        android:padding="@dimen/tile_padding"
        android:text="@string/default_text"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/text_big_text"
        app:layout_constraintTop_toBottomOf="@+id/textView_recreationText" />

    <Button
        android:id="@+id/button_add_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_time"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/text_title"
        android:layout_above="@+id/button_skip_recreation"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/button_skip_recreation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@color/colorDarkBase"
        android:text="@string/skip"
        android:textColor="@color/cardview_light_background"
        android:textSize="@dimen/text_title" />

</RelativeLayout>
