<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorBackground">


    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/frag_course_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginTop="14dp"
            android:layout_margin="@dimen/activity_horizontal_margin"
            card_view:cardCornerRadius="4dp"
            card_view:cardElevation="4dp"
            card_view:cardBackgroundColor="@android:color/white">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/activity_horizontal_margin">

                <TextView
                    android:text="TextView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_day"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="20dp"
                    android:textSize="30sp" />

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_below="@+id/textView_day"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true"
                    android:background="?attr/colorButtonNormal"
                    android:layout_marginBottom="10dp">

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cardview_light_background"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:layout_marginBottom="0.2dp">

                        <TextView
                            android:id="@+id/textView_exercise"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:maxWidth="40dp"
                            android:text="@string/exercises"
                            android:textSize="16sp"
                            android:textStyle="bold" />

                        <TextView
                            android:text="@string/count"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView_count"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:textStyle="bold"
                            android:textSize="16sp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cardview_light_background"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:layout_marginBottom="0.2dp">

                        <TextView
                            android:id="@+id/textView_exercise1"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:maxWidth="40dp"
                            android:text="TextView"
                            android:textSize="16sp" />

                        <TextView
                            android:text="TextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView_count1"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:textSize="16sp" />

                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cardview_light_background"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:layout_marginBottom="0.2dp">

                        <TextView
                            android:id="@+id/textView_exercise2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:maxWidth="40dp"
                            android:text="TextView"
                            android:textSize="16sp" />

                        <TextView
                            android:text="TextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView_count2"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:textSize="16sp" />
                    </TableRow>

                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cardview_light_background"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp"
                        android:layout_marginBottom="0.2dp">

                        <TextView
                            android:id="@+id/textView_exercise3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:maxWidth="40dp"
                            android:text="TextView"
                            android:textSize="16sp" />

                        <TextView
                            android:text="TextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView_count3"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:textSize="16sp" />
                    </TableRow>
                    <TableRow
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@color/cardview_light_background"
                        android:paddingBottom="10dp"
                        android:paddingTop="10dp">

                        <TextView
                            android:id="@+id/textView_exercise4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="2"
                            android:maxWidth="40dp"
                            android:text="TextView"
                            android:textSize="16sp" />

                        <TextView
                            android:text="TextView"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/textView_count4"
                            android:layout_weight="1"
                            android:gravity="right"
                            android:textSize="16sp" />
                    </TableRow>
                </TableLayout>

            </RelativeLayout>

        </android.support.v7.widget.CardView
            >

        <Button
            android:id="@+id/button_startTraining"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:elevation="4dp"
            android:text="@string/start_training"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/frag_course_footer"
        android:paddingTop="0.5dp"
        android:background="?attr/colorButtonNormal">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            card_view:cardCornerRadius="1dp"
            card_view:cardElevation="8dp"
            card_view:cardBackgroundColor="@color/cardview_light_background"
            android:background="@android:drawable/screen_background_dark_transparent">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingTop="8dp">

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/text_view_completed"
                    android:gravity="center_horizontal" />

                <TextView
                    android:text="TextView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/textView_leftDays"
                    android:gravity="center_horizontal" />

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/progressBar_completed"
                    android:max="100"
                    android:progress="50" />

            </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

</RelativeLayout>